Upgrade to Java 17 and build against the Paper API